--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "vite": "^5.1.3"
   },
   "devDependencies": {
-    "glob": "^10.3.10"
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-decorators": "^7.23.9",
+    "glob": "^10.3.10",
+    "vite-plugin-babel": "^1.2.0"
   }
 }
